--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="card-container">
           <img src="images/image-qr-code.png" alt="" />
           <div class="details">
-            <p class="heading">
+            <h1 class="heading">
               Improve your front-end skills by building projects
-            </p>
+            </h1>
             <p class="description">
               Scan the QR code to visit Frontend Mentor and take your coding
               skills to the next level
